# CLion

./: CMakeLists.txt
05/: Date.cpp  Date.h  Friends.cpp  Friends.h  Person.cpp  Person.h  main.cpp
Aufgabe1/: Aufgabe1.cpp  Aufgabe1.h  main.cpp  main.h
Aufgabe10/: main.cpp
Aufgabe11/: main.cpp
Aufgabe2/: Aufgabe2.cpp
Aufgabe3/: Aufgabe3.cpp  Aufgabe3.h  Date.cpp  Date.h  Person.cpp  Person.h
Aufgabe4/: Aufgabe4.cpp  Aufgabe4.h  Date.cpp  Date.h  Person.cpp
Aufgabe5/: Aufgabe5.cpp  Aufgabe5.h  Friends.cpp  Friends.h
Aufgabe6/: Aufgabe6.cpp  Aufgabe6.h  Friends.cpp  Friends.h  Person.cpp  Person.h
Aufgabe7/: Aufgabe7.cpp  Aufgabe7.h  Date.cpp  Date.h  Friends.cpp  Friends.h  Vector.cpp
Aufgabe8/: ArrayList.cpp  ArrayList.h  Aufgabe8.cpp  Aufgabe8.h  Date.cpp  Date.h  Person.cpp  Person.h
Aufgabe9/: Aufgabe9.cpp  Aufgabe9.h
Uebungen/: uebung1.cpp  uebung1.h
